--- a/index.html
+++ b/index.html
@@ -36,20 +36,26 @@
     <!-- material icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/main.css" />
 
     <!-- lodash -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <!-- gsap & ScrollToPlugin -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js" integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollToPlugin.min.js" integrity="sha512-agNfXmEo6F+qcj3WGryaRvl9X9wLMQORbTt5ACS9YVqzKDMzhRxY+xjgO45HCLm61OwHWR1Oblp4QSw/SGh9SA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    
     <!-- swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper@7/swiper-bundle.min.css" />
     <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+
     <!-- ScrollMagic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <!-- <script defer src="./js/youtube.js"></script> -->
+    <script defer src="./js/youtube.js"></script>
+
+    <script defer src="./js/common.js"></script>
     <script defer src="./js/main.js"></script>
 </head>
 <body>
@@ -486,6 +492,7 @@
             </div>
         </div>
     </section>
+
     <section class="youtube">
         <div class="youtube_area">
             <div id="player"></div>
@@ -496,6 +503,7 @@
             <img src="./images/floating2.png" alt="icon" class="floating floating2" />
         </div>
     </section>
+
     <section class="season_product scroll_spy">
         <div class="inner">
             <img src="./images/floating3.png" alt="icon" class="floating floating3" />
@@ -509,6 +517,7 @@
             </div>
         </div>
     </section>
+
     <section class="reserve_coffee scroll_spy">
         <div class="inner">
             <img src="./images/reserve_logo.png" alt="" class="reserve_logo back_to_position to_right delay_0" />
@@ -521,6 +530,7 @@
             <img src="./images/reserve_image.png" alt="" class="product back_to_position to_left delay_3" />
         </div>
     </section>
+
     <section class="pick_your_favorite scroll_spy">
         <div class="inner">
             <div class="text_group">
@@ -532,6 +542,7 @@
             </div>
         </div>
     </section>
+
     <section class="reserve_store">
         <div class="inner">
             <div class="medal">
@@ -545,6 +556,7 @@
             </div>
         </div>
     </section>
+
     <section class="find_store scroll_spy">
         <div class="inner">
             <img src="./images/find_store_texture2.png" alt="" class="texture2" />
@@ -560,6 +572,7 @@
             </div>
         </div>
     </section>
+
     <section class="awards">
         <div class="inner">
             <div class="swiper">
@@ -604,6 +617,7 @@
             </div>
         </div>
     </section>
+
     <footer>
         <div class="inner">
             <ul class="menu">
